Resolved an issue where the cart icon was wrapping to the second row on larger screens (>= 992px) due to insufficient container width

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -57,6 +57,12 @@ body{
   display:contents;
 }
 
+/*  Media query to adjust the minimum width of the icons list container on larger screens */
+@media (min-width: 992px) {
+  .icons-list{
+    min-width:336px !important;
+  }
+}
  .form-control{
     box-shadow: none;
     outline: none;
